Now with iframe

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello World
+<html>
+<p>Hello World</p>
+<p>Embedding</p>
+<iframe width="100%" frameborder="0" src="https://trial.sisense.com/app/main#/dashboards/58651583736a1ea4590000ad/widgets/58651583736a1ea4590000b1?embed=true"></iframe>
+
+</html>
